# azure-functions-knowledge-python

./: 404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  PRD.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  index.html  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci-test.yml  stale.yml
agent-playbook/: index.html
docs/: agent-playbook.md  getting-started.md  index.md  installation.md  release_process.md
getting-started/: index.html
installation/: index.html
release_process/: index.html
search/: search_index.json
src/azure_functions_knowledge/providers/: notion.py
